:sparkles: update scan feature
