# scanner/internal/database/models.go
@@ -1,18 +1,0 @@
-// Code generated by sqlc. DO NOT EDIT.
-// versions:
-//   sqlc v1.18.0
-
-package repository
-
-import (
-	"database/sql"
-	"time"
-
-	"github.com/google/uuid"
-)
-
-type Scan struct {
-	ID        sql.NullInt32 `json:"id"`
-	Uuid      uuid.UUID     `json:"uuid"`
-	CreatedAt time.Time     `json:"created_at"`
-}
